Added features like adamin enhancement, online storage etc...

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 asgiref==3.3.4
 certifi==2021.5.30
 chardet==4.0.0
+cloudinary==1.26.0
 decorator==4.4.2
 dj-database-url==0.5.0
 Django==3.2.4
+django-admin-interface==0.16.3
 django-cleanup==5.2.0
+django-cloudinary-storage==0.3.0
+django-colorfield==0.4.1
+django-flat-responsive==2.0
+django-flat-theme==1.1.4
 django-heroku==0.3.1
 gunicorn==20.1.0
 idna==2.10
@@ -16,9 +22,11 @@ Pillow==8.2.0
 proglog==0.1.9
 psycopg2==2.9.1
 python-decouple==3.4
+python-magic==0.4.24
 pytube==10.8.5
 pytz==2021.1
 requests==2.25.1
+six==1.16.0
 sqlparse==0.4.1
 tqdm==4.61.1
 urllib3==1.26.5
